# application-sample

./: README.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_todo.md
.github/workflows/: dev-react-app-deploy-to-s3.yml  (+1 more)
cloudformation/: cloudfront.yml  codepipeline.yml  s3-cloudfront.yml
dataset/: README.md  create-dataset.js  create-dataset.ts  package-lock.json  package.json
docs/: README.md
dynamodb/: README.md  docker-compose.yml
google-login/: README.md
lambda/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg
lambda/functions/fetch_openbd_summary/: main.py
lambda/functions/invoke_save_book/: main.py
lambda/functions/list_books/: main.py
lambda/functions/save_book/: main.py
lambda/functions/save_book_to_rds/: main.py
lambda/functions/save_gbooks_to_ddb/: main.py
lambda/functions/save_openbd_to_ddb/: main.py
lambda/functions/search_book/: main.py
lambda/layers/mt_sample_common/: entity.py  integration_response.py
lambda/layers/mt_sample_database/: book_datasource.py  book_dto.py  book_repository.py  database.py  requirements.txt
lambda/layers/mt_sample_domain/: book.py  book_query_service.py  book_repository.py  exception.py  google_api.py  openbd.py
lambda/layers/mt_sample_interface/: log.py
lambda/layers/mt_sample_interface/config/: logging.conf
lambda/layers/mt_sample_usecase/: book_query_service.py  book_service.py
lambda/layers/requirements/: requirements.txt
line-login/: README.md
(+61 files in other folders)
